# fastapi_template

./: .dockerignore  .env.example  Dockerfile  README.md  UV_INSTALL.md  cookiecutter.json  create_fastapi_project.py  docker-build.bat  docker-build.sh  docker-compose-prod.yml  docker-compose.yml  install_with_uv.bat  install_with_uv.sh  pyproject.toml  requirements.txt  setup.py  test_install.py
alembic/: env.py
app/: main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: router.py
app/api/v1/endpoints/: items.py  users.py
app/core/: __init__.py  config.py  exceptions.py
app/models/: __init__.py  base.py  item.py  user.py
app/repositories/: __init__.py  item_repository.py  user_repository.py
app/schemas/: __init__.py  item.py  user.py
app/services/: __init__.py  item_service.py  user_service.py
app/utils/: __init__.py  response.py
cookiecutter-fastapi-template/: README.md  cookiecutter.json
cookiecutter-fastapi-template/hooks/: post_gen_project.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/alembic/: README  env.py  script.py.mako
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/: __init__.py  main.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/api/: dependencies.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/api/v1/: router.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/api/v1/endpoints/: auth.py  items.py  users.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/core/: config.py  database.py  exceptions.py  init_db.py  security.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/models/: base.py  item.py  user.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/repositories/: item_repository.py  user_repository.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/app/schemas/: item.py  token.py  user.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/scripts/: README.md  __init__.py  init_db.py  run_app.py  run_tests.py
cookiecutter-fastapi-template/{{cookiecutter.project_slug}}/tests/: README.md  __init__.py  conftest.py  test_api_items.py  test_api_users.py
examples/: README.md  create_example_project.py
tests/: __init__.py  conftest.py  test_api_items.py  test_api_users.py  test_main.py  test_utils.py
